# kaleidoscope

./: CMakeLists.txt
src/: ash.cpp  lexer.cpp  main.cpp  parser.cpp
src/headers/: ast.h  lexer.h  parser.h
